pixtech_portforio/theme/assets/css/style.css
/* ... */
.mw_wp_form_confirm .text {
  margin-top: 26px;
}

/* page-work */
.page-work .contents-wrap {
  margin-top: 60px;
}

.page-work .thumbnail {
  display: flex;
  aspect-ratio: 16/9;
}

.page-work .detail-wrap {
  margin-top: 60px;
}

.page-work .detail + .detail {
  margin-top: 46px;
}

.page-work .detail .head {
  font-weight: bold;
}

.page-work .detail .body {
  margin-top: 20px;
}

.page-work .button-wrap {
  display: flex;
  justify-content: center;
  margin-top: 60px;
}

.page-work .skill-icons {
  display: flex;
  flex-wrap: wrap;
  gap: 20px;
}

.page-work .icon {
  width: min(46%, 128px);
}

/* .page-archive-works */
.page-archive-works .contents-wrap {
  margin-top: 60px;
}

.page-archive-works .thumbnail-wrap {
  display: flex;
  flex-wrap: wrap;
  gap: 20px;
  justify-content: space-between;
}

/* page-contact */
.page-contact .contents-wrap {
  margin-top: 60px;
}

.page-contact .input-wrap {
  display: flex;
  flex-direction: column;
}

.page-contact .input-wrap + .input-wrap {
  margin-top: 30px;
}

.page-contact .input {
  width: 100%;
  height: 36px;
  margin-top: 16px;
  border: 1px solid #ccc;
}

.page-contact .input.inquiry {
  height: 340px;
  resize: vertical;
}

.page-contact .button-wrap {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  justify-content: center;
  margin-top: 60px;
  text-align: center;
}

.page-contact .button {
  width: 190px;
}

.page-contact.complete .text {
  padding: 60px 0;
  text-align: center;
}

/* sections */
.section.about-this-site {
  background-color: var(--background-color-main);
}

.section .inner {
  padding: 60px 0;
}

.section .contents-wrap {
  display: flex;
  margin-top: 60px;
}

.section.about-this-site .text {
  width: min(98%, 450px);
  margin: 0 auto;
  line-height: 1.5;
  letter-spacing: 1px;
}

.section.about-me .contents-wrap {
  align-items: center;
  justify-content: space-between;
}

.section.about-me .name {
  font-size: 24px;
}

.section.about-me .small-letter {
  margin-left: 20px;
  font-size: 16px;
}

.section.about-me .detail {
  margin-top: 26px;
  line-height: 1.5;
}

.section.about-me .avatar {
  width: 260px;
  height: 260px;
}

.section.skills .skill-icons {
  display: flex;
  flex-wrap: wrap;
  row-gap: 40px;
  column-gap: 14%;
}

.section.skills .icon {
  width: 128px;
  height: auto;
}

.section.works .contents-wrap {
  flex-direction: column;
}

.section.works .button-wrap {
  display: flex;
  justify-content: center;
  margin-top: 60px;
}

.section.contact {
  background-color: var(--background-color-light);
}

.section.contact .contents-wrap {
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.section.contact .text {
  color: var(--background-color-sub);
  text-align: center;
}

.section.contact .button-wrap {
  display: flex;
  justify-content: center;
  margin-top: 60px;
}

.section.contact textarea {
  height: 340px;
}

/* footer */
.footer {
  position: relative;
  padding-bottom: 10px;
  background-color: var(--background-color-dark);
}

.footer .inner {
  position: relative;
  display: flex;
  align-items: center;
  justify-content: flex-end;
  width: min(calc(100% - 30px * 2), 1060px);
  padding: 42px 0;
  margin: 0 auto;
}

.footer .term {
  line-height: 1;
  color: var(--font-color-light);
}

/* SPのみのデザイン */
@media not all and (min-width: 768px) {
  .page-flame .flame-edge.vertical {
    width: 10px;
  }

  .page-flame .flame-edge.horizontal {
    height: 10px;
  }

  .flame-text .text {
    bottom: 8px;
  }

  .header {
    top: 10px;
  }

  .header .nav-list {
    position: fixed;
    top: 0;
    right: 0;
    display: flex;
    height: 100vh;
    transform: translateX(100%);
  }

  .header .nav-list.is-open {
    transition: all 0.3s;
  }

  .header .nav-toggle {
    display: block;
  }

  .first-view .hero-message {
    font-size: 40px;
  }

  .sp-break {
    display: inline;
  }

  .pc-break {
    display: none;
  }

  .headline {
    flex-direction: column;
    font-family: var(--font-family-emphasis);
    font-size: 28px;
  }

  .subhead {
    font-size: 20px;
  }

  .section.about-me .contents-wrap {
    flex-direction: column-reverse;
  }

  .section.about-me .introduce {
    width: min(100%, 450px);
    margin-top: 30px;
  }

  .section.skills .skill-icons {
    justify-content: space-around;
  }

  .section.skills .icon {
    width: 100px;
  }

  .page-archive-works .thumbnail {
    width: 100%;
  }

  .page-contact .button-wrap {
    flex-direction: column;
  }

  .page-contact .button + .button {
    margin-top: 60px;
  }
}

/* SP以外のデザイン */
@media only screen and (min-width: 768px) {
  .page-flame .flame-edge.vertical {
    width: 15px;
  }

  .page-flame .flame-edge.horizontal {
    height: 15px;
  }

  .flame-text .text {
    bottom: 10px;
  }

  .header {
    top: 15px;
  }

  .header .nav-toggle {
    display: none;
  }

  .header .nav-list {
    position: absolute;
    left: calc(50% - 200px);
    display: flex;
  }

  .header .nav-list li {
    min-width: 100px;
    text-align: center;
  }

  .sp-break {
    display: none;
  }

  .pc-break {
    display: inline;
  }

  .headline {
    align-items: center;
  }

  .subhead {
    margin-left: 40px;
  }

  .section.about-me .contents-wrap,
  .section.skills .contents-wrap {
    padding: 0 40px;
  }

  .section.about-me .introduce {
    width: min(50%, 350px);
  }

  .section.skills .skill-icons {
    justify-content: space-between;
  }

  .section.skills .icon {
    width: 128px;
  }

  .page-archive-works .thumbnail {
    width: calc(50% - 10px);
  }

  .page-contact .button-wrap {
    gap: 94px;
  }

  .footer {
    padding-bottom: 15px;
  }
}

/* タブレットのみのデザイン */
@media (min-width: 768px) and (max-width: 1023px) {
  .first-view .hero-message {
    font-size: 60px;
  }

  .headline {
    font-size: 40px;
  }

  .subhead {
    font-size: 20px;
  }
}
/* ... */

